--- a/docs/cloud/guides/collect-job-data.mdx
+++ b/docs/cloud/guides/collect-job-data.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Collect jobs info from orchestrator"
+title: "Collect Jobs Info From Orchestrator"
 sidebarTitle: "Collect jobs data"
 ---
 
