--- a/docs/cloud/integrations/bi/tableau.mdx
+++ b/docs/cloud/integrations/bi/tableau.mdx
@@ -3,7 +3,7 @@ title: "Tableau"
 ---
 
 After you connect Tableau, Elementary will automatically and continuously extend the lineage to the dashboard level.
-This will provide you end-to-end data lineage to understand your downstream dependencies, called exposures.
+This will provide end-to-end data lineage to help you understand your downstream dependencies, called exposures.
 
 
 In order for Elementary to extract your metadata from Tableau you must meet all of the Tableau Metadata GraphQL requirements (most are set by default):
@@ -15,7 +15,7 @@ In order for Elementary to extract your metadata from Tableau you must meet all 
 
 ## Tableau Cloud
 
-### Creating Personal Access Token
+### Creating a Personal Access Token
 
 Create a Personal Access Token in Tableau. For details on how to create a user token please refer to the **[Tableau guide](https://help.tableau.com/current/pro/desktop/en-us/useracct.htm#create-a-personal-access-token)**.
 
