--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Introduction"
 icon: "cloud"
 ---
 
-**Elementary is a data observability platform tailored for dbt first data organizations.**
+**Elementary is a data observability platform tailored for dbt-first data organizations.**
 
 The unique dbt-native architecture seamlessly integrates into engineers' workflows, ensuring ease of use and smooth adoption. 
 The platform provides out-of-the-box monitoring for critical issues, tools to effortlessly increase coverage, and integrations for end-to-end visibility across the data stack.
