--- a/docs/features/data-lineage/lineage.mdx
+++ b/docs/features/data-lineage/lineage.mdx
@@ -5,7 +5,7 @@ sidebarTitle: Lineage overview
 
 <Snippet file="cloud/cloud-feature-tag.mdx" />
 
-Elementary offers automated [Column Level Lineage](/features/column-level-lineage) functionality, enriched with the latest test and monitors results.
+Elementary offers automated [Column-Level Lineage](/features/column-level-lineage) functionality, enriched with the latest test and monitors results.
 It is built with usability and performance in mind. 
 The column-level lineage is built from the metadata of your data warehouse, and integrations with [BI tools]((/features/exposures-lineage#automated-bi-lineage)) such as Looker and Tableau.
 
@@ -15,7 +15,7 @@ This up-to-date lineage data is essential for supporting several critical workfl
 - **Effective Data Issue Debugging**: Identify and trace data issues back to their sources.
 - **Incidents impact analysis**: You could explore which downstream assets are impacted by each data issue.
 - **Prioritize data issues**: Prioritize the triage and resolution of issues that are impacting your critical downstream assets.
-- **Public assets health**: By selecting an exposure and filtering on upstream nodes, you could see the status of all it’s upstream data sets.
+- **Public assets health**: By selecting an exposure and filtering on upstream nodes, you can see the status of all its upstream datasets.
 - **Change impact**: Analyze which exposures will be impacted by a planned change.
 - **Unused datasets**: Detect datasets that are not consumed downstrean, and could be removed to reduce costs.
 
@@ -31,9 +31,9 @@ alt="Elementary Lineage"
 
 ## Node info and test results
 
-To see additional information in the lineage view, use the `...` menu right to the column:
+To view additional information in the lineage view, use the `...` menu to the right of the column:
 
-- **Test results**: Access the table latest test results in the lineage view.
+- **Test results**: Access the table's latest test results in the lineage view.
 - **Node info**: See details such as description, owner and tags. If collected, it will include the latest job info.
 
 
