--- a/docs/features/data-tests/data-tests-overview.mdx
+++ b/docs/features/data-tests/data-tests-overview.mdx
@@ -5,7 +5,7 @@ sidebarTitle: Overview and configuration
 
 Data tests are useful for validating and enforcing explicit expectations on your data.
 
-Elementary enables to vlaidate data and track results by leveraging dbt tests and dbt packages (e.g. dbt-utils, dbt-expectations, elementary).
+Elementary enables data validation and result tracking by leveraging dbt tests and dbt packages such as dbt-utils, dbt-expectations, and Elementary.
 This rich ecosystem of tests covers various use cases, and is widely adopted as a standard for data validations.
 Any custom dbt generic or singular test you develop will also be included.  
 
