--- a/docs/features/data-tests/dbt-tests.mdx
+++ b/docs/features/data-tests/dbt-tests.mdx
@@ -8,7 +8,7 @@ _🚧 Under construction 🚧_
 
 ## Elementary dbt package tests
 
-Elementary dbt package also provides tests for detection of data quality issues.
+The Elementary dbt package also provides tests for detection of data quality issues.
 Elementary data tests are configured and executed like native tests in your dbt project.
 
 <Snippet file="data-tests/tests-cards.mdx" />
