--- a/docs/features/multi-env.mdx
+++ b/docs/features/multi-env.mdx
@@ -4,7 +4,7 @@ title: "Multiple Environments"
 
 <Snippet file="cloud/cloud-feature-tag.mdx" />
 
-An environment in Elementary is a combination of dbt project and target. 
-For example: If you have a single dbt project with three targets, prod, staging and dev, you could create 3 environments in Elementary and monitor these envs. 
+An environment in Elementary is a combination of a dbt project and a target. 
+For example: If you have a single dbt project with three targets, prod, staging and dev, you can create 3 environments in Elementary and monitor these environments. 
 
 If you have several dbt projects and even different data warehouses, Elementary enables monitoring the data quality of all these environments in a single interface.
