--- a/docs/features/performance-monitoring/performance-monitoring.mdx
+++ b/docs/features/performance-monitoring/performance-monitoring.mdx
@@ -14,10 +14,9 @@ Elementary monitors and logs the execution times of:
 
 Navigate to the `Model Duration` tab.
 
-On the table you could see the latest execution time, median execution time, and execution time trend for each model.
-You can order the table by these times, and dive into the execution times over time of the models with the longest duration.
+The table displays the latest execution time, median execution time, and execution time trend for each model. You can sort the table by these metrics and explore the execution times over time for the models with the longest durations
 
-It is also useful to use the navigation bar to filter the results, and see run times per tag / owner / folder.
+It is also useful to use the navigation bar to filter the results, and see run times per tag/owner/folder.
 
 <iframe
 width="700"
@@ -34,7 +33,7 @@ alt="Elementary Models Duration tab"
 
 Navigate to the `Test Execution History` tab.
 
-On the table you could see the median execution time and fail rate per test.
-You can order the table by this time column, and detect tests that are compute heavy.
+On the table you can see the median execution time and fail rate per test.
+You can sort the table by this time column, and detect tests that are compute heavy.
 
-It is also useful to use the navigation bar to filter the results, and see run times per tag / owner / folder.
+It is also useful to use the navigation bar to filter the results, and see run times per tag/owner/folder.
