--- a/docs/_snippets/cloud/integrations/snowflake.mdx
+++ b/docs/_snippets/cloud/integrations/snowflake.mdx
@@ -12,7 +12,7 @@ Provide the following fields:
 - **Elementary schema**: The name of your Elementary schema. Usually `[schema name]_elementary`.
 - **Role (optional)**: e.g. `ELEMENTARY_ROLE`.
 
-Elementary cloud supports the user password and key pair authentication connection methods.
+Elementary Cloud supports the user password and key pair authentication connection methods.
 
 - **User password**:
   - User: The user created for Elementary.
