--- a/docs/features/anomaly-detection/monitors-overview.mdx
+++ b/docs/features/anomaly-detection/monitors-overview.mdx
@@ -5,13 +5,13 @@ sidebarTitle: "Monitors overview"
 
 <Snippet file="cloud/cloud-feature-tag.mdx" />
 
-ML-powered anomaly detection monitors to automatically identify outliers and unexpected patterns in your data.
-These are useful to detect issues such as incomplete data, delays, drop in a specific dimension or a spike in null values.
+ML-powered anomaly detection monitors automatically identify outliers and unexpected patterns in your data.
+These are useful to detect issues such as incomplete data, delays, a drop in a specific dimension or a spike in null values.
 
 Elementary offers two types of monitors: 
 
-- **Automated Monitors** - Out-of-the-box monitors who are activated automatically, and query metadata only. 
-- **Opt-in Monitors** - Monitors who query raw data and require configuration.
+- **Automated Monitors** - Out-of-the-box monitors activated automatically, that query metadata only. 
+- **Opt-in Monitors** - Monitors that query raw data and require configuration.
 
 ## [Automated monitors](/features/anomaly-detection/automated-monitors)
 
