--- a/docs/features/ci.mdx
+++ b/docs/features/ci.mdx
@@ -14,7 +14,7 @@ You'll also be able to see if any of your dbt tests are failing or your models a
 
 <img src="/pics/cloud/pr_impact_example.png" />
 
-Elementary CI automations will help you make changes with confidence and seeing the full picture before merging your pull request.
+Elementary CI automations help you make changes with confidence by providing a comprehensive view before merging your pull request.
 
 ## Want to join the beta?
 
