--- a/docs/features/data-lineage/column-level-lineage.mdx
+++ b/docs/features/data-lineage/column-level-lineage.mdx
@@ -1,5 +1,5 @@
 ---
-title: Column Level Lineage
+title: Column-Level Lineage
 sidebarTitle: Column level lineage
 ---
 
@@ -8,7 +8,7 @@ sidebarTitle: Column level lineage
 The table nodes in Elementary lineage can be expanded to show the columns. When you
 select a column, the lineage of that specific column will be highlighted.
 
-Column level lineage is useful for answering questions such as:
+Column-level lineage is useful for answering questions such as:
 
 - Which downstream columns are actually impacted by a data quality issue?
 - Can we deprecate or rename a column?
@@ -16,10 +16,10 @@ Column level lineage is useful for answering questions such as:
 
 ### Filter and highlight columns path
 
-To help navigate graphs with large amount of columns per table, use the `...` menu right to the column:
+To help navigate graphs with large amount of columns per table, use the `...` menu to the right of the column:
 
-- **Filter**: Will show a graph of only the selected column and it's dependencies.
-- **Highlight**: Will highlight only the selected column and it's dependencies.
+- **Filter**: Will show a graph of only the selected column and its dependencies.
+- **Highlight**: Will highlight only the selected column and its dependencies.
 
 <iframe
 width="700"
@@ -31,12 +31,12 @@ allowfullscreen
 alt="Elementary Lineage"
 ></iframe>
 
-### Column level lineage generation
+### Column-level lineage generation
 
 Elementary parses SQL queries to determine the dependencies between columns.
 Note that the lineage is only of the columns that directly contribute data to the column.
 
-For example for the query:
+For example, for the query:
 
 ```sql
 create or replace table db.schema.users as
@@ -50,4 +50,4 @@ where user_type != 'test_user'
 The direct dependency of `total_logins` is `login_events.login_time`.
 The column `login_events.user_type` filter the data of `total_logins`, but it is an indirect dependency and will not show in lineage.
 
-If you want a different approach in your Elementary Cloud instance - Contact us.
+If you want a different approach in your Elementary Cloud instance - contact us.
