--- a/docs/resources/business-case-data-observability-platform.mdx
+++ b/docs/resources/business-case-data-observability-platform.mdx
@@ -3,17 +3,23 @@ title: "When do I need a data observability platform?"
 sidebarTitle: "When to add data observability"
 ---
 
-## When do I need a data observability platform? 
 
 ### If the consequences of data issues are high
 If you are running performance marketing budgets of $millions, a data issue can result in a loss of hundreds of thousands of dollars. 
-In these cases, the ability to detect and resolve issues fast is business critical and typically involves multiple teams and the ability to measure, track, and report on data quality.  
+In these cases, the ability to detect and resolve issues fast is business-critical. It typically involves multiple teams and the ability to measure, track, and report on data quality.  
 
 ### If data is scaling faster than the data team 
-The scale and complexity of modern data environments make it impossible for teams to manually manage quality without expanding the team.  A data observability platform enables automation and collaboration ensuring data quality is maintained as data continues to grow, without impacting team efficiency. 
+The scale and complexity of modern data environments make it impossible for teams to manually manage quality without expanding the team.  A data observability platform enables automation and collaboration, ensuring data quality is maintained as data continues to grow, without impacting team efficiency. 
 
 ### Common use cases
-Self-service analytics, data activation, powering AI & ML products, embedded analytics, performance marketing, regulatory reporting, A/B testing and experiments
+If your data is being used in one of the following use cases, you should consider adding a data observability platform:
+- Self-service analytics 
+- Data activation
+- Powering AI & ML products
+- Embedded analytics 
+- Performance marketing 
+- Regulatory reporting 
+- A/B testing and experiments 
 
 ## Why isn't the open-source package enough?
 The open-source package was designed for engineers that want to monitor their dbt project. The Cloud Platform was designed to support the complex, multifaceted requirements of larger teams and organizations, providing a holistic observability solution.
