--- a/docs/_snippets/cloud/features.mdx
+++ b/docs/_snippets/cloud/features.mdx
@@ -34,7 +34,7 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
 
 Detecting issues is just the first step to achieve data reliability.
 Elementary offers tools to create an effective response plan, for faster recovery.
-This includes investigating the root cause ane impact of issues, communicating issues to the relevant people, assigning owners to fix issues, keeping track of open incidents and more.
+This includes investigating the root cause and impact of issues, communicating issues to the relevant people, assigning owners to fix issues, keeping track of open incidents and more.
 
 <CardGroup cols={2}>
   <Card title="Data Lineage" href="/features/data-lineage/lineage">
