--- a/docs/_snippets/cloud/features.mdx
+++ b/docs/_snippets/cloud/features.mdx
@@ -47,7 +47,7 @@ This includes investigating issues root cause and impact, communicating issues t
     Distribute highly configurable alerts to different channels and integrations. 
     Automatically tag owners, and enable setting status and assigns at the alert level.  
   </Card>
-  <Card title="Automated Grouping">
+  <Card title="Automated Grouping" href="/features/alerts-and-incidents/incidents">
     Different failures who relate to the same issue are grouped automatically to a single incident.
     This accelerates triage and response, and reduces alerts fautigue.  
   </Card>
