--- a/docs/_snippets/quickstart/quickstart-cards.mdx
+++ b/docs/_snippets/quickstart/quickstart-cards.mdx
@@ -3,7 +3,7 @@
     title="Elementary Cloud Platform"
     icon="cloud"
     iconType="solid"
-    href="https://elementary-data.frontegg.com/oauth/account/sign-up"
+    href="/cloud/introduction"
   >
     <br />
         Built on top of the OSS package, ideal for teams monitoring mission-critical data pipelines, requiring guaranteed uptime and reliability, short-time-to-value, advanced features, collaboration, and professional support.
