--- a/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -8,14 +8,14 @@ sidebarTitle: Alerts & incidents overview
 Alerts and incidents in Elementary are designed to shorten your time to response and time to resolution when data issues occur.
 
 - **Alert -** Notification about an event that indicates a data issue.
-- **Incident -** A data issue that starts with an event, but can include several events grouped to an incident. An incident has a start time, status, assignee and end time. 
+- **[Incident](/features/alerts-and-incidents/incidents) -** A data issue that starts with an event, but can include several events grouped to an incident. An incident has a start time, status, severity, assignee and end time. 
 
 Alerts provide information and context for recipients to quickly triage, prioritize and resolve issues. 
 For collaboration and promoting ownership, alerts include owners and tags. 
 You can create distribution rules to route alerts to the relevant people and channels, for faster response. 
 
 An alert would either open a new incident, or be automatically grouped and added to an ongoing incident.
-From the alert itself, you can update the status and assignee of an incident. In the incidents management page,
+From the alert itself, you can update the status and assignee of an incident. In the [incidents page](/features/alerts-and-incidents/incident-management),
 you will be able to track all open and historical incidents, and get metrics on the quality of your response.
 
 ## Alerts & incidents core functionality 
@@ -27,6 +27,10 @@ you will be able to track all open and historical incidents, and get metrics on 
 - **Alerts customization** -
 - **Group alerts to incidents** -
 - **Alerts suppression** -
+
+## Alert types
+
+<Snippet file="cloud/features/alerts-and-incidents/alert-types.mdx" />
 
 ## Supported alert integrations
 
