--- a/docs/features/alerts-and-incidents/incidents.mdx
+++ b/docs/features/alerts-and-incidents/incidents.mdx
@@ -38,7 +38,7 @@ These can be set in the [Incidents page](/features/alerts-and-incidents/incident
 ## How incidents are resolved?
 
 Each incident starts at the first failure, and ends when the status is changed manually or automatically to `Resolved`.
-An incident is **automatically resolved** when the failing tests, monitors and / or models are succesful again.
+An incident is **automatically resolved** when the failing tests, monitors and / or models are successful again.
 
 ## Incident grouping rules
 
