Docs to master (#1576)
* Update data-observability-dashboard.mdx

* automated monitors

* fix

* Update multi-env.mdx

* Update elementary-alerts.mdx

* Update key-features.mdx

* Update config-as-code.mdx

* Update elementary-alerts.mdx

* Update looker.mdx

Added the `develop` permission.

* remove dependency on git access for exposures from docs

* Tableau server

* security

* exclude elementary tests

* Improved webhook jobs description

* change CTAs

* Docs update - structure and comparison table (#1456)

* WIP

* added cloud vs oss

* fixes

* added integrations

* Update troubleshoot.mdx

* Update teams.mdx (#1457)

* Fix typo

* Integrations pages change (#1469)

* WIP, BI

* WIP

* WIP dwh integrations

* WIP bi integrations

* WIP integrations

* WIP alerts

* WIP alerts

* orchestration

* Update exposures-lineage.mdx

* Eplicit explenation about the output of generate_schema_baseline_test

* added output example

* fix alert links

* fix links (#1477)

* video lineage

* minor docs fixes

* fix orchestrators links

* change offering names

* change offering names

* updates

* add empty ui troubleshooting section

* quick update for model override

* Update volume-anomalies.mdx (#1526)

Use regular dash instead of EM dash so it will work when copying

* fixes to dimensions documentation

* fixes to dimensions documentation

* Snowflake summit

* github instructions

* Fixed incorrect test name 'all_column_anomalies' in docs.

* Cloud docs revamp (#1567)

* fixes to dimensions documentation

* business case and how does elementary work

* fixes to dimensions documentation

* fixes to dimensions documentation

* how it works snippet

* how it works snippet

* Lineage

* Lineage changes

* anomaly detection

* data tests

* data tests

* data tests

* performance monitoring

* navigation changes

* links

* typos

* b

--- a/docs/cloud/guides/troubleshoot.mdx
+++ b/docs/cloud/guides/troubleshoot.mdx
@@ -4,7 +4,7 @@ title: "Troubleshooting"
 
 ### I connected my data warehouse but I don't see any test results
 
-If you already connected your data warehouse to Elementary but don't see anything in Elementary UI, there could be several reasons.
+If you already connected your data warehouse to Elementary but are not seeing anything in the Elementary UI, there could be several reasons.
 Try following these steps to troubleshoot:
 
 
@@ -18,15 +18,15 @@ Try following these steps to troubleshoot:
 - If you have, make sure the table was created as an incremental table (not a regular table or view).
 - If not, there is a materialization configuration in your `dbt_project.yml` file that overrides the package config. Remove it, and run `dbt run --select elementary --full-refresh` to recreate the tables. After that run `dbt test` again and check if there is data.
 
-**4. Still no data in the table? Reach out to the elementary team by starting an intercom chat from Elementary UI.**
+**4. Still no data in the table? Reach out to the Elementary team by starting an intercom chat from the Elementary UI.**
 
 
 ### Column information cannot be retrieved
 
 This error can happen because of a few reasons:
 
-1. check that your elementary dbt package version is 0.12.0 or higher
-2. check that the user you are using to connect to your database has permission to access the information schema of all the schemas built or used by your dbt project
+1. Check that your elementary dbt package version is 0.12.0 or higher.
+2. Check that the user you are using to connect to your database has permission to access the information schema of all the schemas built or used by your dbt project.
 
 For more information on the permissions required by each data warehouse:
 
@@ -39,3 +39,14 @@ For more information on the permissions required by each data warehouse:
 [Databricks](/cloud/integrations/dwh/databricks#permissions-and-security)
 
 [Postgres](/cloud/integrations/dwh/postgres#permissions-and-security)
+
+
+### How do I set up the table name of my Singular test?
+
+Singular tests are sql queries that can reference more than one table, but are often intended to test a logic that is related to one table in particular.
+In order to have that table name appear in the UI in the test results, test execution and more screens, you can set it up by adding the following to the config block of your singular test file:
+```
+{{ config(
+    override_primary_test_model_id="model_name"
+) }}
+```
