--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -1,20 +1,44 @@
 ---
-title: "Elementary Cloud"
+title: "Elementary Cloud Platform"
 sidebarTitle: "Introduction"
 icon: "cloud"
 ---
 
-<Snippet file="cloud/introduction-opening.mdx" />
+**Elementary is a data observability platform tailored for dbt-first data organizations.**
 
-<CardGroup cols={1}>
-  <Card
-    title="Quickstart Elementary Cloud"
-    href="/cloud/onboarding/quickstart-dbt-package"
-    icon="circle-play"
-    iconType="solid"
-  >
-    Start 30 days free trial, no credit card is required.
-  </Card>
-</CardGroup>
+The unique dbt-native architecture seamlessly integrates into engineers' workflows, ensuring ease of use and smooth adoption. 
+The platform provides out-of-the-box monitoring for critical issues, tools to effortlessly increase coverage, and integrations for end-to-end visibility across the data stack.
 
-<Snippet file="cloud/introduction.mdx" />
+Elementary promotes ownership and collaboration on incidents, and enables the whole data organization to take an active role in the data quality process.
+By automatically measuring and tracking data health, it helps teams transition from reactive firefighting to proactively communicating data health to consumers and stakeholders.
+
+<Card title="When do I need a data observability platform? " href="/resources/business-case-data-observability-platform">
+</Card>
+
+
+## Cloud Platform Features
+
+<Snippet file="cloud/features.mdx" />
+
+## Architecture and Security
+
+<Snippet file="cloud/how-it-works.mdx" />
+
+Our product is designed with [Security and Privacy](/cloud/general/security-and-privacy) in mind.
+
+<Check>
+**SOC 2 certification:** Elementary is SOC2 type II certified!
+</Check>
+
+
+## How to Start? 
+
+<Card
+title="Quick start"
+href="/quickstart"
+></Card>
+
+<Card
+title="Book a call with our team"
+href="https://cal.com/maayansa/elementary-intro-docs"
+></Card>
