--- a/docs/features/ci.mdx
+++ b/docs/features/ci.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Elementary CI"
 sidebarTitle: "Elementary CI"
-icon: "code-pull-request"
 ---
 
 <Snippet file="cloud/cloud-feature-tag.mdx" />
@@ -15,7 +14,7 @@ You'll also be able to see if any of your dbt tests are failing or your models a
 
 <img src="/pics/cloud/pr_impact_example.png" />
 
-Elementary CI automations will help you make changes with confidence and seeing the full picture before merging your pull request.
+Elementary CI automations help you make changes with confidence by providing a comprehensive view before merging your pull request.
 
 ## Want to join the beta?
 
