--- a/docs/features/config-as-code.mdx
+++ b/docs/features/config-as-code.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Configuration as Code"
-icon: "code"
+title: "Configuration-as-Code"
 ---
 
-All Elementary configuration is managed in your dbt code. 
+All Elementary configurations are managed in your dbt code. 
 
 Configuring observability becomes a part of the development process that includes version control, continuous integration, and a review process.
 
-In Elementary Cloud, you can save time by adding tests in bulk from the UI that will be added to your code. Additionally, you can allow data analysts to create quality tests without writing any code. Elementary will take care of it for them and open pull requests for them.
+In Elementary Cloud, you can save time by adding tests in bulk from the UI that will be added to your code. Additionally, you can allow data analysts to create quality tests without writing any code. Elementary will take care of it for them and open pull requests on their behalf.
 
