--- a/docs/features/collaboration-and-communication/catalog.mdx
+++ b/docs/features/collaboration-and-communication/catalog.mdx
@@ -1,13 +1,11 @@
 ---
 title: "Data Catalog"
-icon: "folder-tree"
-iconType: "solid"
 ---
 
 <Snippet file="cloud/cloud-feature-tag.mdx" />
 
 On the Catalog tab you can now explore your datasets information - descriptions, columns, columns descriptions, latest update time and datasets health.
-From the dataset you can navigate directly to it’s lineage and test results.
+From the dataset you can navigate directly to its lineage and test results.
 
 The catalog content is generated from the descriptions you maintain in your dbt project YML files.
 
