--- a/docs/features/alerts-and-incidents/incident-management.mdx
+++ b/docs/features/alerts-and-incidents/incident-management.mdx
@@ -23,7 +23,7 @@ src="https://res.cloudinary.com/diuctyblm/video/upload/v1719927342/incidents-wid
 frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 allowfullscreen
-alt="Elementary Lineage"
+alt="Elementary Incidents page"
 ></iframe>
 
 
