--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -312,7 +312,7 @@ description: "See what's new in the cloud platform"
         This should help you manage incidents and collaborate more effectively with your team.
 
         <Frame>
-        ![Status and assignee for alerts](pics/changelog/status-and-assignee-for-alerts.png)
+          <img src="https://res.cloudinary.com/diuctyblm/image/upload/v1720008668/status-and-assignee-for-alerts_mj0evg.png" />
         </Frame>
 
     </div>
