--- a/docs/_snippets/cloud/features.mdx
+++ b/docs/_snippets/cloud/features.mdx
@@ -75,7 +75,7 @@ the overall health of the data platform and progress made to improve it with the
   <Card title="Data Catalog" href="/features/collaboration-and-communication/catalog">
     Search and explore your datasets information - descriptions, columns, column descriptions, compiled code, datasets health and more.
   </Card>
-  <Card title="Data Health Score">
-    Coming soon!
+  <Card title="Data Health Dashboard" href="/features/collaboration-and-communication/data-health">
+    See the Data Health scores of all your datasets by domain and share with stakeholders.
   </Card>
 </CardGroup>
