--- a/docs/features/collaboration-and-communication/data-health.mdx
+++ b/docs/features/collaboration-and-communication/data-health.mdx
@@ -32,12 +32,14 @@ The dashboard is based on the 6 pillars of data observability:
 
 
 To give a high-level overview that doesn't require deep technical knowledge, the dashboard presents the data health in a simple way, using a color code to indicate the health of each pillar.
-The total score is a weighted average of the 6 pillars, where the weight is configurable.
-
-The thresholds for the color coding (green, yellow and red) are also configurable.
-
 Filters are available at the top of the page, making it easy to see the data health in different contexts.
 
-<Frame>
-    <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1720528038/c6qvebsssbaivnimibbm.png" alt="Data Health Dashboard" />
-</Frame>
+
+<img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1720528038/c6qvebsssbaivnimibbm.png" alt="Data Health Dashboard" />
+
+
+The total score is a weighted average of the 6 pillars, where the weight is configurable.
+The thresholds for the color coding (green, yellow and red) are also configurable.
+
+<img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1720528475/dfxb2atgfkxthpwlrjkv.png" alt="Score weight and threshold configuration" />
+
